# velo2cam_gazebo

./: .gitignore  README.md
calibration_simulator/: CMakeLists.txt  package.xml
calibration_simulator/launch/: calibration_simulator.launch  chess_calibration.launch  error_stereo_calibration_bothmoved.launch  error_stereo_calibration_zero.launch  geiger.launch  geiger_pitch.launch  hdl32test.launch  ideal_stereo_calibration_bothmoved.launch  ideal_stereo_calibration_zero.launch  stereo_calibration.launch  stereo_calibration_pitch.launch  stereo_calibration_roll.launch  stereo_calibration_rot.launch  stereo_calibration_sensorsmoved.launch  stereo_calibration_transandrot.launch  stereo_calibration_yaw.launch  stereo_calibration_zero.launch  test_calibration.launch
calibration_simulator/launch/hdl32/: geiger_stereoHDL32_bothmoved.launch  geiger_stereoHDL32_pitch.launch  geiger_stereoHDL32_roll.launch  geiger_stereoHDL32_rot.launch  geiger_stereoHDL32_sensorsmoved.launch  geiger_stereoHDL32_trans.launch  geiger_stereoHDL32_transandrot.launch  geiger_stereoHDL32_yaw.launch  geiger_stereoHDL32_zero.launch  real_stereoHDL32_bothmoved.launch  real_stereoHDL32_pitch.launch  real_stereoHDL32_roll.launch  real_stereoHDL32_rot.launch  real_stereoHDL32_sensorsmoved.launch  real_stereoHDL32_yaw.launch  (+3 more)
calibration_simulator/worlds/: calibration_scene.world  geiger_bothmoved.world  geiger_roll.world  new.world  pitch.world  velotest.world
velo2cam_gazebo/: CMakeLists.txt  package.xml
velo2cam_gazebo/launch/: record_gazebo.launch
velo2cam_gazebo/worlds/: calibration_scene.world
(+590 files in other folders)
