<?xml version="1.0"?>
<package>
  <name>velo2cam_gazebo</name>
  <version>1.0.0</version>
  <description>
    Metapackage allowing easy installation of velo2cam_gazebo components.
  </description>

  <license>GNU GPLv2</license>
  <url type="website">http://wiki.ros.org/velo2cam_gazebo</url>
  <author>Jorge Beltran</author>
  <maintainer email="jbeltran@ing.uc3m.es">Jorge Beltran</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>velodyne_gazebo_plugin</run_depend>

  <export>
    <!-- <metapackage/> -->
  </export>

</package>
